hphp/test/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php.expectf
*** Testing mcrypt_ecb() : usage variation ***

--empty string DQ--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s/test/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php(58)
bool(false)

--empty string SQ--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s/test/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php(58)
bool(false)
===DONE===
